--- a/_data/projects.json
+++ b/_data/projects.json
@@ -128,7 +128,7 @@
                 "description": "Load historical Membership transaction data into Stripe with email as key",
                 "owner": "Harold",
                 "project_name": "Membership Form",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2019-12-11",
@@ -162,55 +162,6 @@
         "name": "Website Re-launch",
         "milestones": [
             {
-                "milestone_date": "2019-12-06",
-                "description": "Chapter pages migrated (not production)",
-                "owner": "Harold",
-                "project_name": "Website Re-launch",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2019-12-06",
-                "description": "Project pages migrated (not production)",
-                "owner": "Harold",
-                "project_name": "Website Re-launch",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2019-12-06",
-                "description": "Events pages migrated (not production)",
-                "owner": "Harold",
-                "project_name": "Website Re-launch",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2019-12-09",
-                "description": "Metadata template information from SEO firm",
-                "owner": "Harold",
-                "project_name": "Website Re-launch",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2019-12-09",
-                "description": "Redirect inventory from SEO firm",
-                "owner": "Mike",
-                "project_name": "Website Re-launch",
-                "status": "overdue"
-            },
-            {
-                "milestone_date": "2019-12-10",
-                "description": "Corporate bios complete (450-510 chars)",
-                "owner": "Lisa",
-                "project_name": "Website Re-launch",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2019-12-10",
-                "description": "Integrate meta tag info into templates",
-                "owner": "Harold",
-                "project_name": "Website Re-launch",
-                "status": "on-time"
-            },
-            {
                 "milestone_date": "2019-12-12",
                 "description": "Policy pages migrated and ready for community review and Board Approval",
                 "owner": "Mike",
@@ -218,44 +169,9 @@
                 "status": "on-time"
             },
             {
-                "milestone_date": "2019-12-12",
-                "description": "Corporate pages migrated (not production)",
-                "owner": "Mike",
-                "project_name": "Website Re-launch",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2019-12-13",
-                "description": "Redirect system in place and ready for launch",
-                "owner": "No Owner",
-                "project_name": "Website Re-launch",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2019-12-13",
-                "description": "Validate in-bound search redirect working on events/policy pages",
-                "owner": "Harold",
-                "project_name": "Website Re-launch",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2019-12-13",
-                "description": "Donation form online",
-                "owner": "Simon",
-                "project_name": "Website Re-launch",
-                "status": "on-time"
-            },
-            {
-                "milestone_date": "2019-12-13",
-                "description": "Membership form onine",
-                "owner": "Simon",
-                "project_name": "Website Re-launch",
-                "status": "on-time"
-            },
-            {
                 "milestone_date": "2019-12-16",
-                "description": "Remaining chapter pages auto-migrated",
-                "owner": "Harold",
+                "description": "Redirect inventory from SEO firm",
+                "owner": "Mike",
                 "project_name": "Website Re-launch",
                 "status": "on-time"
             },
@@ -269,6 +185,20 @@
             {
                 "milestone_date": "2019-12-16",
                 "description": "Events pages migrated",
+                "owner": "Harold",
+                "project_name": "Website Re-launch",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2019-12-18",
+                "description": "Redirect system in place and ready for launch",
+                "owner": "No Owner",
+                "project_name": "Website Re-launch",
+                "status": "on-time"
+            },
+            {
+                "milestone_date": "2019-12-18",
+                "description": "Validate in-bound search redirect working on events/policy pages",
                 "owner": "Harold",
                 "project_name": "Website Re-launch",
                 "status": "on-time"
@@ -295,11 +225,25 @@
                 "status": "on-time"
             },
             {
-                "milestone_date": "2019-12-24",
+                "milestone_date": "2019-01-02",
+                "description": "Metadata template information from SEO firm",
+                "owner": "Harold",
+                "project_name": "Website Re-launch",
+                "status": "overdue"
+            },
+            {
+                "milestone_date": "2019-01-05",
+                "description": "Integrate meta tag info into templates",
+                "owner": "Harold",
+                "project_name": "Website Re-launch",
+                "status": "overdue"
+            },
+            {
+                "milestone_date": "2019-01-15",
                 "description": "Events form (poc)",
                 "owner": "Simon",
                 "project_name": "Website Re-launch",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2020-01-15",
@@ -344,7 +288,7 @@
                 "description": "Beta version of Event Form Ready for testing",
                 "owner": "Simon",
                 "project_name": "Events Form",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-01-17",
@@ -721,7 +665,7 @@
                 "status": "future"
             }
         ],
-        "description": "The OWASP Foundation will host a three-day working session for FIVE selected projects in Cancun, Mexico, Feburary 20-22, 2020. Arrival day will be Wednesday the 19th and departures will be the 23rd. Projects must apply and then get selected to participate. The application process will require project meeting goals, workplan, key contributors, and expected attendance. The OWASP Foundation Officers Group will make the final selection.The event program will solely include heads-down work time for OWASP projects. Any \"group\" gatherings will be during meal times. Spectators are not welcomed and attendance is limited to OWASP Members. Limited travel assistance will be provided for up to five key project leaders/contributors per project selected.Leaders of projects selected are required to attend or that project will not be selected. If a project fails to secure five attendees, their project's invitation will be rescinded.",
+        "description": "The OWASP Foundation will host a three-day working session for FIVE selected projects in Cancun, Mexico, Feburary 27-29, 2020. Arrival day will be Wednesday the 26th and departures will be March 1st. Projects must apply and then get selected to participate. The application process will require project meeting goals, workplan, key contributors, and expected attendance. The OWASP Foundation Officers Group will make the final selection.The event program will solely include heads-down work time for OWASP projects. Any \"group\" gatherings will be during meal times. Spectators are not welcomed and attendance is limited to OWASP Members. Limited travel assistance will be provided for up to five key project leaders/contributors per project selected.Leaders of projects selected are required to attend or that project will not be selected. If a project fails to secure five attendees, their project's invitation will be rescinded.",
         "leaders": [
             {
                 "name": "Project - Harold Blankenship",
@@ -865,7 +809,7 @@
                 "description": "Open CFT/CFP",
                 "owner": "Emily",
                 "project_name": "Global AppSec - Dublin 2020",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-02-01",
