remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -40,7 +40,7 @@
                 "description": "Retire SalesForce member notification system",
                 "owner": "Harold",
                 "project_name": "2019Q4 Marketing",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2019-12-13",
@@ -166,7 +166,7 @@
                 "description": "Policy pages migrated and ready for community review and Board Approval",
                 "owner": "Mike",
                 "project_name": "Website Re-launch",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2019-12-16",
@@ -710,7 +710,7 @@
         "milestones": [
             {
                 "milestone_date": "2020-02-15",
-                "description": "Ship Stickers to SnowFROC",
+                "description": "Ship Stickers to SnowFROC, 12/11/19 told Mike need cc to order.",
                 "owner": "Lisa",
                 "project_name": "OWASP SnowFROC",
                 "status": "future"
