remote update file

--- a/_data/projects.json
+++ b/_data/projects.json
@@ -571,7 +571,7 @@
                 "description": "Reminder #3",
                 "owner": "Harold",
                 "project_name": "Projects Summit - Winter 2020",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-01-15",
