--- a/_data/projects.json
+++ b/_data/projects.json
@@ -54,7 +54,7 @@
                 "description": "EXPECTED Website launch",
                 "owner": "Harold",
                 "project_name": "2019Q4 Marketing",
-                "status": "on-time"
+                "status": "overdue"
             },
             {
                 "milestone_date": "2019-12-20",
@@ -295,7 +295,7 @@
                 "description": "Relecase Candiate of Form ready for regression testing",
                 "owner": "Simon",
                 "project_name": "Events Form",
-                "status": "future"
+                "status": "on-time"
             },
             {
                 "milestone_date": "2020-01-23",
